--- a/style.css
+++ b/style.css
@@ -1,12 +1,46 @@
-#navslika{
-    width: 300px;
-    margin-left: 40px;
-}
-#slikapodnav{
+/* Add your existing CSS styles here */
+/* Other styles omitted for brevity */
+
+#registerModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
     width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
 }
-#login{
-    float: right;
-    margin-right:40px ;
-    
+
+#loginModal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
 }
+.modal-content {
+    display: grid;
+    justify-content: center;
+    text-align: center;
+    width: 30%;
+    border: 5px solid black;
+    background-color: #fff;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.close {
+    float: left;
+    text-align: left;
+    cursor: pointer;
+}
+
+/* Add your existing CSS styles here */
+/* Other styles omitted for brevity */
