--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
 /* Add your existing CSS styles here */
 /* Other styles omitted for brevity */
+body{
+    margin: 0;
+}
+#navslika{
+    width: 300px;
+    margin-bottom: 10px;
+    margin-left: 40px;
+}
+#login, #register{
+    width: 150px;
+    height: 40px;
+    font-size: 20px;
+    font-weight: 800;
+    float:right;
+    border: 0px solid transparent;
+    border-radius: 0.2em;
+    background-color: red;
+    color: white;
+    margin-top: 20px;
+    margin-right: 40px;
+}
+#slikapodnav{
+    width: 100%;
+}
+
 
 #registerModal {
     display: none;
@@ -44,3 +69,35 @@
 
 /* Add your existing CSS styles here */
 /* Other styles omitted for brevity */
+
+
+.igri{
+    padding-left: 20px;
+    width: 100%;
+    height: 700px;
+    background-image: url(https://storage.googleapis.com/jp-content/pattern_170e1bebf0/pattern.svg_pattern_170e1bebf0.svg);
+}
+#prazno{
+    width: 100%;
+    height: 700px;
+}
+
+#slika{
+    display: inline-block;
+    margin-top: 40px;
+    width: 260px;
+    height: 150px;
+    border-radius: 2em;
+}
+#textbox{
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 1em;
+    text-align: left;
+    width: 240px;
+    height:40px;
+    background-color: white;
+}
+#imetoNaIgrata{
+    margin-bottom: 5px;
+}
